# apexbank

./: .env  README.md  docker-compose.yml  documentation.txt  render.yaml
backend/: CMakeLists.txt  Dockerfile  config.json
backend/db/: schema.sql
backend/src/: main.cc
backend/src/controllers/: AccountController.cc  AccountController.h  AdminController.cc  AdminController.h  AuthController.cc  AuthController.h  BillController.cc  BillController.h  FixedDepositController.cc  FixedDepositController.h  LoanController.cc  LoanController.h  MerchantController.cc  MerchantController.h  TransactionController.cc  TransactionController.h
backend/src/middleware/: AuthMiddleware.cc  AuthMiddleware.h  IdempotencyMiddleware.cc  IdempotencyMiddleware.h  RateLimitMiddleware.cc  RateLimitMiddleware.h  WafMiddleware.cc  WafMiddleware.h
backend/src/security/: Argon2Hasher.cc  Argon2Hasher.h  EncryptionUtil.cc  EncryptionUtil.h  PayloadEncryptionAdvice.cc  PayloadEncryptionAdvice.h  RateLimiter.cc  RateLimiter.h  TokenManager.cc  TokenManager.h
backend/src/services/: FixedDepositManager.cc  FixedDepositManager.h  LedgerService.cc  LedgerService.h  LoanEngine.cc  LoanEngine.h  MerchantManager.cc  MerchantManager.h  NigerianUtilityProviders.cc  NigerianUtilityProviders.h  NotificationService.cc  NotificationService.h
backend/tests/: concurrency_test.cc  idempotency_test.cc  ledger_reconciliation_test.cc  loan_rule_test.cc  main.cc
desktop/: license.txt  main.js  package-lock.json  package.json  preload.js
frontend/: .env  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  mockBackend.ts
frontend/src/api/: bankApi.ts  encryption.ts
frontend/src/components/: DeveloperHud.tsx  Header.tsx  Sidebar.tsx  Toast.tsx
frontend/src/context/: BankContext.tsx
frontend/src/pages/: Admin.tsx  Auth.tsx  FixedDeposits.tsx  Loans.tsx  Merchant.tsx  Overview.tsx  Transfers.tsx  Utilities.tsx
